--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,11 @@ android {
         jvmTarget = '1.8'
     }
 
+
 }
 
 dependencies {
-
+    implementation 'com.github.hannesa2:AndroidSlidingUpPanel:4.5.0' // Android X
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
